...
          requestClose();
        }
      }}
    >
      <BottomSheet.Trigger asChild>
        <Button onPress={() => setOpen(true)}>
          <Button.Label>Edit task</Button.Label>
        </Button>
      </BottomSheet.Trigger>
      <BottomSheet.Portal>
        <BottomSheet.Overlay />
        <BottomSheet.Content
          contentContainerClassName="h-full"
...
                }
              }}
              size="lg"
            >
              {loading ? <Spinner color="default" size="sm" /> : null}
              <Button.Label>
                {loading ? "Saving changes…" : "Save changes"}
              </Button.Label>
            </Button>
          </View>
        </BottomSheet.Content>
      </BottomSheet.Portal>
    </BottomSheet>
...
