...
          title: "Home",
        }}
      />
      <Tabs.Screen
        name="tasks"
        options={{
          tabBarAccessibilityLabel: "Tasks tab",
          title: "Tasks",
        }}
      />
      <Tabs.Screen
        name="more"
        options={{
...
